--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title> Ahana's coding website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,6 +20,31 @@
        </iframe>  
        <iframe src="https://studio.code.org/projects/applab/F4HMyv0LobEmM5txrgaYoXQEetJMaDiJBeTUk60IDBo/embed" width="400" height="600" style="border:4px;" >
        </iframe>  
+    </section>
+    
+    <section id="games">
+        <h1>
+            Games
+        </h1>
+        <div class="line">
+        </div>
+        <a href="https://studio.code.org/projects/playlab/_wWdcO4mAMUhzgLbp3iSRhruXwyPKEdEgEGExjyfbAY" target="_blank"><img src="https://studio.code.org/v3/files/_wWdcO4mAMUhzgLbp3iSRhruXwyPKEdEgEGExjyfbAY/.metadata/thumbnail.png"></a>
+         <a href="https://studio.code.org/projects/flappy/39uqyQsIv1zT4S4qPjtdQRv0OJvgOI7ruYUzxXM7akI" target="_blank"><img src="https://studio.code.org/blockly/media/flappy/placeholder.jpg"></a>
+         <a href="https://studio.code.org/projects/spritelab/Ed2bXSLe1H4mgSSTPDnMDBkzYx8TyB2Cj3lMVYDCRT4" target="_blank"><img src="https://studio.code.org/v3/files/Ed2bXSLe1H4mgSSTPDnMDBkzYx8TyB2Cj3lMVYDCRT4/.metadata/thumbnail.png"></a>
+    </section>
+    
+    <section id="chatbot">
+        <h1>
+         Chatbot   
+        </h1>
+        <div class="line">
+        </div>
+        <iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/cee7f71b-8b90-42dc-82ca-98d2a899f420">
+</iframe>
     </section>
 </body>
 </html>
